--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 gamest.txt filter=lfs diff=lfs merge=lfs -text
 games.txt filter=lfs diff=lfs merge=lfs -text
+*.pgn filter=lfs diff=lfs merge=lfs -text
